--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,6 +12,6 @@
         </div>
         <button type="submit" class="btn btn-dark btn-lg btn-block">Sign Up</button>
     </form>
-    <a href="/auth/login">One of us already? Login here!</a>
+    <a href="/auth/login" class="loginLink">One of us already? Login here!</a>
 
 <% include ./partials/footer %>
