--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         </div>
         <button type="submit" class="btn btn-dark btn-lg btn-block">Login</button>
     </form>
-    <a href="/auth/signup">Not registered yet? Join us now!</a>
+    <a href="/auth/signup" class="loginLink">Not registered yet? Join us now!</a>
 </div>
 
 <% include ./partials/footer %>
